@@ -1,3 +1,11 @@
+2011-01-28  svu
+
+	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
+	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h,
+	tests/test_config.c: Adding the function to perform the search by 
+	pattern. Current implementation searches only layouts - variants are
+	to be added
+
 2011-01-03  svu
 
 	* libxklavier/xklavier_evt.c, libxklavier/xklavier_private.h: fixed
